# tree-sitter-sscript

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  Vivienne.sscript  binding.gyp  example.sscript  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  story.md  tree-sitter.json
bindings/c/: tree-sitter-sscript.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_sscript/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSscript/: sscript.h
bindings/swift/TreeSitterSscriptTests/: TreeSitterSscriptTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
