[package]
name = "tree-sitter-sscript"
description = "A Parser for Story Script"
version = "0.1.0"
authors = ["Chaitanya S <seschaitanya535@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "sscript"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/schaitanya535/tree-sitter-sscript"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
